# peptide-qspr

./: .gitignore  APD_GPOS_SEQS.out  CMakeLists.txt  README.md  align_seqs.py  background_only_FPR.txt  background_only_TPR.txt  count_length_3_motifs.py  count_length_4_motifs.py  count_length_5_motifs.py  count_length_6_motifs.py  do_APD_human_likes.py  do_ROC.py  do_combined_ROC.py  do_gauss_ROC.py  do_gibbs_ROC.py  do_gibbs_stats.py  do_human_combined_ROC.py  do_stats.py  evaluate_peptide.py  histograms.py  in_progress.py  make_QSAR_ROC.py  make_pdb_distributed_peptides.py  motifs_fixed_start.py  motifs_sequence_pymc3.py  pdb_distributed_apd_length_peptides.txt  plot_descriptors.py  plot_gaussians.py  plot_motif_dists.py  prepare_dists.py  real_apd_lengths.txt  requirements.txt  scratch.py  setup.py  shorter_pdb_distributed_peps.out  simple_sequence_pymc3.py  summary.csv  svm_descriptors.py  test.ALogP_observed  (+2 more)
data/: APD.data  APD_dist.txt  APD_lengths.txt  apd_lengths.txt  apd_seqs_only.txt  big_testpeps.out  control_peptides.txt  hmm_test_peps.out  motif_generated_peps.out  motif_predicted_peps_all_classes.txt  pdb_dist.txt  pdb_distributed_apd_length_peps.csv  pdb_distributed_apd_length_peps.out  pdb_distributed_apd_length_peps.txt  pdb_like_peps.out  pymc3_motif_peps.out  vit_motif_classes.txt
data/gaussmix/: 10_clusters.bins  10_clusters.counts  10_clusters_FPR.txt  10_clusters_ROC_LOG.txt  10_clusters_TPR.txt  2.roc  2.tpr  2_clusters_FPR.txt  2_clusters_HelixShape_observed.counts  2_clusters_TPR.txt  2_clusters_nAcidicGroup_observed.counts  2_clusters_nAromAtom_observed.counts  2_clusters_nAromaticGroups_observed.bins  2_clusters_nAromaticGroups_observed.counts  2_clusters_nBasicGroup_observed.bins  2_clusters_nChargedGroup_observed.counts  2_clusters_nHBAcc_observed.bins  2_clusters_nHBAcc_observed.counts  2_clusters_nHBDon_observed.counts  2_clusters_nNonPolarGroups_observed.bins  2_clusters_nNonPolarGroups_observed.counts  2_clusters_nPolarGroups_observed.counts  2_clusters_netCharge_observed.counts  3_clusters.bins  3_clusters.counts  3_clusters_FPR.txt  3_clusters_ROC_LOG.txt  3_clusters_TPR.txt  4_clusters.bins  4_clusters.counts  4_clusters_FPR.txt  (+37 more)
evaluation/: evaluate_peptide.py
gaussmix/: APD_gaussmix.py  APD_multi_gaussmix.py
gibbs/: alt_control_peptides.txt  backup.py  control_peptides.txt  gibbs.py  gibbs_cpp.py  gibbs_py.h  gibbs_works_for_single_class.py  make_controlled_peps.py  test_gibbs.py
gibbs/python/: CMakeLists.txt  do_gibbs_ROC.py  do_gibbs_stats.py  gibbs.sbatch  gibbs_cpp.py  gibbs_py.cpp  gibbs_py.cxx  gibbs_py.h  new_gibbs_cpp.py  test.py
gibbs/python/no_motif_starts/: CMakeLists.txt  do_gibbs_ROC.py  gibbs_cpp.py  gibbs_py.cpp  gibbs_py.h  test.py
qspr_plots/: qspr_plots.py  setup.py
resources/: 3_clusters_8_motifs_length_3_combined_statistics_log.txt  APD_GPOS_SEQS.txt
scripts/: count_length_3_motifs.py  count_length_4_motifs.py  count_length_5_motifs.py  count_length_6_motifs.py  do_APD_human_likes.py  do_combined_ROC.py  do_gauss_ROC.py  do_gauss_stats.py  do_gibbs_ROC.py  do_gibbs_stats.py  make_pdb_distributed_peptides.py  plot_descriptors.py  plot_motif_dists.py  plot_nice_motif_dists.py  svm_descriptors.py
(+430 files in other folders)
