CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "DEBUG")
  #SET(CMAKE_BUILD_TYPE "RELEASE")
  #SET(CMAKE_BUILD_TYPE "RELWITHDEBINFO")
  #SET(CMAKE_BUILD_TYPE "MINSIZEREL")
ENDIF()

FIND_PACKAGE(Boost REQUIRED COMPONENTS python REQUIRED)
FIND_PACKAGE(PythonLibs REQUIRED)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} "/usr/include/python3.5" "/usr/include/boost")
#  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)
  FIND_PACKAGE(Boost 1.58.0 COMPONENTS python-py35 REQUIRED)

  ADD_LIBRARY(gibbs SHARED gibbs_py.cxx gibbs_py.cpp)
  SET_TARGET_PROPERTIES(gibbs PROPERTIES COMPILE_FLAGS "-I${PROJECT_SOURCE_DIR} -I/usr/include/boost/python -O3 -march=native -funroll-loops" LINK_FLAGS "-I${PROJECT_SOURCE_DIR} -I/usr/include/boost/python")
  TARGET_LINK_LIBRARIES(gibbs ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()

IF(CMAKE_COMPILER_IS_GNUCXX)
  ADD_DEFINITIONS("-Wall")
ELSE()
  MESSAGE(FATAL_ERROR "CMakeLists.txt has not been tested/written for your compiler.")
ENDIF()
